# gielladetect

./: .flake8  .gitignore  .pylintrc  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  lint_and_test.yml
gielladetect/: __init__.py  text_cat.py  util.py
tests/: test_memory_allocation.py  test_memory_allocation_1.py  test_memory_allocation_2.py
