[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gielladetect"
description = "Language detection module based on the GiellaLT models, specifically aimed at minority and indigenous languages"
version = "1.0.2"
readme = "README.md"
license = {text="GPLv3"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.urls]
repository = "https://github.com/NationalLibraryOfNorway/gielladetect"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"gielladetect.lm" = ["*.lm", "*.wm"]

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-function-docstring,missing-module-docstring,missing-class-docstring,invalid-name,attribute-defined-outside-init"

[tool.flake8]
max-line-length = 100
exclude = ["__pycache__", "venv", "build"]
per-file-ignores = ["gielladetect/__init__.py:F401"]

[tool.mypy]
strict = "True"
